// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FragmentLoader should work with a "large" attribute 1`] = `
<svg
  className="fragment-loader"
>
  <rect
    className="fragment-square left"
  />
  <rect
    className="fragment-square middle"
  />
  <rect
    className="fragment-square right"
  />
</svg>
`;

exports[`FragmentLoader should work with a "small" and "dark" attributes 1`] = `
<svg
  className="fragment-loader loader-on-dark"
>
  <rect
    className="fragment-square left"
  />
  <rect
    className="fragment-square middle"
  />
  <rect
    className="fragment-square right"
  />
</svg>
`;

exports[`FragmentLoader should work with a "small" attribute 1`] = `
<svg
  className="fragment-loader"
>
  <rect
    className="fragment-square left"
  />
  <rect
    className="fragment-square middle"
  />
  <rect
    className="fragment-square right"
  />
</svg>
`;

exports[`StandardLoader should work with a "large" attribute 1`] = `
<svg
  className="sg-loader"
>
  <rect
    className="logo-square bottom-left"
  />
  <rect
    className="logo-square bottom-middle"
  />
  <rect
    className="logo-square middle"
  />
  <rect
    className="logo-square top-middle"
  />
  <rect
    className="logo-square top-right"
  />
  <rect
    className="logo-square middle-left"
  />
  <rect
    className="logo-square middle-right"
  />
</svg>
`;

exports[`StandardLoader should work with a "small" and "dark" attributes 1`] = `
<svg
  className="sg-loader loader-on-dark"
>
  <rect
    className="logo-square bottom-left"
  />
  <rect
    className="logo-square bottom-middle"
  />
  <rect
    className="logo-square middle"
  />
  <rect
    className="logo-square top-middle"
  />
  <rect
    className="logo-square top-right"
  />
  <rect
    className="logo-square middle-left"
  />
  <rect
    className="logo-square middle-right"
  />
</svg>
`;

exports[`StandardLoader should work with a "small" attribute 1`] = `
<svg
  className="sg-loader"
>
  <rect
    className="logo-square bottom-left"
  />
  <rect
    className="logo-square bottom-middle"
  />
  <rect
    className="logo-square middle"
  />
  <rect
    className="logo-square top-middle"
  />
  <rect
    className="logo-square top-right"
  />
  <rect
    className="logo-square middle-left"
  />
  <rect
    className="logo-square middle-right"
  />
</svg>
`;
